[package]
edition = "2024"
name = "rust-lib"
version = "2.18.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.17", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.16.13"
keyring = { version = "3.6.2", features = ["windows-native", "sync-secret-service"] }
markdown-it = "0.6.1"
glob-match = "0.2.1"
env_logger = "0.11.8"
log = "0.4.27"
colored = "3.0.0"
markdown-it-footnote = "0.2.0"
markdown-it-lazyload = "0.1.1"
exif = { package = "kamadak-exif", version = "0.6.1" }
regex = "1.10.2"
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "2.2.0"

[profile.release]
lto = true
strip = "symbols"
