[package]
edition = "2024"
name = "rust-lib"
version = "2.21.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.8.2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "3.5.1"
keyring = { version = "3.6.3", features = ["windows-native", "sync-secret-service"] }
markdown-it = "0.6.1"
glob-match = "0.2.1"
env_logger = "0.11.8"
log = "0.4.29"
colored = "3.1.1"
markdown-it-footnote = "0.2.0"
markdown-it-lazyload = "0.1.1"
exif = { package = "kamadak-exif", version = "0.6.1" }
regex = "1.12.2"
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
syntect = { version = "5.3.0", default-features = true }

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
strip = "symbols"
